Fixed gulp calling wrong Less project file and other minor styles fixes

--- a/builds/dev/less/base/constants.less
+++ b/builds/dev/less/base/constants.less
@@ -35,7 +35,7 @@
 @instagram: #8a3ab9;
 
 // Specific Colors
-@highlight-color: #40E0D0;
+@highlight-color: #00c5cd;
 @black: #00000;
 @white: #ffffff;
 @grey: #cccccc;
@@ -45,12 +45,8 @@
 
 
 // TODO: Might want to get rid of these
-@base-color: #3F51B5;
-@background-color: cyan;
-@accent-color: orange;
 @dark-grey: #666666;
-@grey-background: #424242;
-@light-text: #9E9E9E;
+
 
 
 //////////////////////////////////////////////////////
