--- a/builds/dev/less/components/buttons.less
+++ b/builds/dev/less/components/buttons.less
@@ -3,7 +3,7 @@
 //////////////////////////////////////////////////////
 
 .button {
-  background: @base-color;
+  background: @highlight-color;
   border: none;
   .border-radius(40px);
   color: @white;
