--- a/builds/dev/less/base/forms.less
+++ b/builds/dev/less/base/forms.less
@@ -1,3 +1,11 @@
 //////////////////////////////////////////////////////
 ///     Form Styles
 //////////////////////////////////////////////////////
+
+#contact-form {
+  background: red;
+}
+
+input {
+  border: 2px solid red;
+}
