--- a/builds/dev/less/base/module.less
+++ b/builds/dev/less/base/module.less
@@ -1,8 +1,8 @@
 @import "clean";
 @import "constants";
-@import "fonts";
-@import "forms";
+//@import "fonts";
 @import "global";
 @import "normalize";
 @import "print";
 @import "tables";
+@import "forms";
