added form styles, improved constants, moved Normalize to vendors directory

--- a/builds/dev/less/base/constants.less
+++ b/builds/dev/less/base/constants.less
@@ -41,10 +41,7 @@
 @grey: #cccccc;
 @dark-grey-bg: #333333;
 @dark-grey-text-color: #9E9E9E;
-@icon-color: #666666;
-
-
-// TODO: Might want to get rid of these
+@icon-color: @dark-grey;
 @dark-grey: #666666;
 
 
