added same rules for a tags as buttons and working on disabled styles

--- a/builds/dev/less/base/forms.less
+++ b/builds/dev/less/base/forms.less
@@ -19,6 +19,7 @@ input, textarea {
 
 }
 
+// Enlarge submit buttons for better usability
 input[type="submit"] {
   width: 100%;
 }
@@ -46,7 +47,9 @@ input[type="submit"] {
     width: 75%;
   }
 
+  // Center submit buttons to the form
   input[type="submit"] {
+    display: block;
     margin: auto;
     width: auto;
   }
