--- a/builds/dev/less/base/global.less
+++ b/builds/dev/less/base/global.less
@@ -63,7 +63,7 @@ a {
 
   &:link,
   &:visited {
-    color: @grey;  // This could change
+    color: @highlight-color;
   }
   &:hover,
   &:focus,
