Added :disabled rules for inputs and buttons

--- a/builds/dev/less/base/forms.less
+++ b/builds/dev/less/base/forms.less
@@ -19,6 +19,11 @@ input, textarea {
 
 }
 
+// Custom styles for disabled input
+input:disabled {
+
+}
+
 // Enlarge submit buttons for better usability
 input[type="submit"] {
   width: 100%;
