Added some constants and mixins. Removed LESS module loaders. Loading LESS files from main.less

--- a/builds/dev/less/base/buttons.less
+++ b/builds/dev/less/base/buttons.less
@@ -64,7 +64,7 @@ button:disabled {
 
   .button {
     position: relative;
-    top: 0px;
+    top: 0;
     .transition(0.5s);
 
     // If a :hover pseudo class is styled, :focus should also be styled for accessibility.
@@ -84,7 +84,7 @@ button:disabled {
       &:active {
         .box-shadow(none);
         position: relative;
-        top: 0px;
+        top: 0;
       }
     }
 
@@ -97,7 +97,7 @@ button:disabled {
     &:active {
       .box-shadow(none);
       position: relative;
-      top: 0px;
+      top: 0;
     }
   }
 
