--- a/builds/dev/less/layout/footer.less
+++ b/builds/dev/less/layout/footer.less
@@ -51,13 +51,13 @@
     .site-footer {
         .column-container {
             .justify-content(center);
-            margin-top: 0px;
+            margin-top: 0;
             a {
                 margin-left: 10px;
             }
         }
         .navigation-list {
-            margin-top: 0px;
+            margin-top: 0;
         }
     }
 
