--- a/builds/dev/less/layout/containers.less
+++ b/builds/dev/less/layout/containers.less
@@ -55,6 +55,8 @@
     margin: auto;
     padding: 30px 25px 50px 25px;
     .box-shadow(0 4px 5px 0 rgba(0,0,0,.14),0 1px 10px 0 rgba(0,0,0,.12),0 2px 4px -1px rgba(0,0,0,.2));
+
+    height: 1200px;
   }
 
 }
