Fixed the active link styles

--- a/builds/dev/less/base/general.less
+++ b/builds/dev/less/base/general.less
@@ -79,10 +79,10 @@ a {
 }
 
 // Horizontal navigation links
-.navigation-list {
+/*.navigation-list {
   .display(flex);
   .flex-direction(column);
-}
+}*/
 
 /* BEST PRACTICE : In order to NOT display the heading content
 on screen the recommended technique is described in this article
@@ -113,14 +113,6 @@ by assistive technologies. */
 
   h1 {
     font-size: 2.2em;
-  }
-
-  .navigation-list {
-    .flex-direction(row);
-
-    a {
-      margin-left: 20px;
-    }
   }
 
 }
