Added a carousel component. Minor fixes.

--- a/builds/dev/less/main.less
+++ b/builds/dev/less/main.less
@@ -40,6 +40,7 @@ version history: [location of file]
 @import "components/parallax";
 @import "components/map";
 @import "components/bottom-cta";
+@import "components/icon-carousel";
 
 /* Page Specific Styles */
 @import "pages/contact";
