--- a/builds/dev/less/utils/constants.less
+++ b/builds/dev/less/utils/constants.less
@@ -51,13 +51,14 @@
 
 // Specific Colors
 @highlight-color: #00c5cd;
-@black: #00000;
-@white: #ffffff;
-@grey: #cccccc;
-@dark-grey-bg: #333333;
+@black: #000;
+@white: #fff;
+@grey: #ccc;
+@dark-grey-bg: #333;
 @dark-grey-text-color: #9E9E9E;
+@light-grey-bg: #eee;
 @icon-color: @dark-grey;
-@dark-grey: #666666;
+@dark-grey: #666;
 @disabled: @grey;
 
 
