--- a/builds/dev/less/components/icon-carousel.less
+++ b/builds/dev/less/components/icon-carousel.less
@@ -3,14 +3,23 @@
 //////////////////////////////////////////////////////
 
 .carousel-wrapper {
+
   background: @light-grey-bg;
   margin-left: -25px;
   margin-right: -25px;
 
+  // Set this to avoid a height change when the icons change size on mouseover
+  max-height: 120px;
+
   .icon {
-    height: 30%;
-    width: 30%;
-    margin-left: 34%;
+    height: 120px;
+    width: 120px;
+    .transition(0.5s ease-in-out);
+  }
+
+  .slickListItem {
+    .display(flex);
+    .justify-content(center);
   }
 
 }
@@ -24,8 +33,8 @@
 @media @mq-tablet {
 
   .carousel-wrapper {
-    /* Arrows */
 
+    // Slick Arrows
     .slick-arrow {
 
       svg {
@@ -58,6 +67,7 @@
       background: transparent;
       z-index: 1000;
     }
+
     .slick-prev:hover,
     .slick-prev:focus,
     .slick-next:hover,
@@ -66,52 +76,33 @@
       outline: none;
       background: transparent;
     }
-    .slick-prev:hover:before,
-    .slick-prev:focus:before,
-    .slick-next:hover:before,
-    .slick-next:focus:before {
-      opacity: 1;
-    }
-    .slick-prev.slick-disabled:before,
-    .slick-next.slick-disabled:before {
-      opacity: .25;
-    }
 
     .slick-prev:before,
     .slick-next:before {
-      opacity: .75;
       color: @highlight-color;
-      -webkit-font-smoothing: antialiased;
-      -moz-osx-font-smoothing: grayscale;
     }
 
     .slick-prev {
-      left: 50px;
+      left: 30px;
+
+      // Rotate the right arrow to make it point left!
       .transform(rotate(180deg));
     }
-    [dir='rtl'] .slick-prev {
-      right: -25px;
-      left: auto;
-    }
-    .slick-prev:before {
-      content: none;
-    }
-    [dir='rtl'] .slick-prev:before {
-      content: '>';
-    }
+
     .slick-next {
-      right: 50px;
+      right: 30px;
     }
-    [dir='rtl'] .slick-next {
-      right: auto;
-      left: -25px;
-    }
-    .slick-next:before {
+
+    .slick-prev:before,
+    .slick-next:before{
       content: none;
     }
-    [dir='rtl'] .slick-next:before {
-      content: '<';
+
+    .slick-list {
+      margin-left: 50px;
+      margin-right: 50px;
     }
+
   }
 
 }
@@ -124,5 +115,26 @@
 //////////////////////////////////////////////////////
 
 @media @mq-desktop {
+
+  .carousel-wrapper {
+
+    .icon {
+      &:hover {
+        width: 130px;
+        height: 130px;
+        margin-top: -5px;
+        .transition(0.5s ease-in-out);
+      }
+    }
+
+    .slick-next {
+      right: 50px;
+    }
+
+    .slick-prev {
+      left: 50px;
+    }
+
+  }
 
 }
