Changed SVG icons for the icon-carousel

--- a/builds/dev/less/components/icon-carousel.less
+++ b/builds/dev/less/components/icon-carousel.less
@@ -123,6 +123,7 @@
         width: 130px;
         height: 130px;
         margin-top: -5px;
+        fill: @black-80;
         .transition(0.3s ease-in-out);
       }
     }
