--- a/builds/dev/less/main.less
+++ b/builds/dev/less/main.less
@@ -41,6 +41,7 @@ version history: [location of file]
 @import "components/map";
 @import "components/bottom-cta";
 @import "components/icon-carousel";
+@import "components/feature-carousel";
 
 /* Page Specific Styles */
 @import "pages/contact";
