Added a scroll to top button

--- a/builds/dev/less/main.less
+++ b/builds/dev/less/main.less
@@ -42,6 +42,7 @@ version history: [location of file]
 @import "components/bottom-cta";
 @import "components/icon-carousel";
 @import "components/feature-carousel";
+@import "components/scroll-to-top";
 
 /* Page Specific Styles */
 @import "pages/contact";
