Added icon carousel specific styles to the component folder

--- a/builds/dev/components/icon-carousel/icon-carousel.less
+++ b/builds/dev/components/icon-carousel/icon-carousel.less
@@ -2,6 +2,12 @@
 ///     Icon Carousel Component Styles
 //////////////////////////////////////////////////////
 
+// Import Dependencies (Variables and Mixins)
+@import "../../less/utils/constants.less";
+@import "../../../../node_modules/lesshat/lesshat";
+
+
+// Begin component specific styles
 .carousel-wrapper {
 
   background: @light-grey-bg;
@@ -23,7 +29,6 @@
   }
 
 }
-
 
 
 //////////////////////////////////////////////////////
@@ -106,8 +111,6 @@
   }
 
 }
-
-
 
 
 //////////////////////////////////////////////////////
