Added all the component specific styles as component imports

--- a/builds/dev/components/bottom-cta/bottom-cta.less
+++ b/builds/dev/components/bottom-cta/bottom-cta.less
@@ -1,7 +1,13 @@
 //////////////////////////////////////////////////////
-///     Bottom CTA Styles
+///     Bottom CTA Component Styles
 //////////////////////////////////////////////////////
 
+// Import Dependencies (Variables and Mixins)
+@import "../../less/utils/constants.less";
+@import "../../../../node_modules/lesshat/lesshat";
+
+
+// Begin component specific styles
 .cta-wrapper {
   background: #ffffff;
   width: 100%;
