--- a/builds/dev/components/feature-carousel/feature-carousel.less
+++ b/builds/dev/components/feature-carousel/feature-carousel.less
@@ -2,7 +2,12 @@
 ///     Feature Carousel Component Styles
 //////////////////////////////////////////////////////
 
+// Import Dependencies (Variables and Mixins)
+@import "../../less/utils/constants.less";
+@import "../../../../node_modules/lesshat/lesshat";
 
+
+// Begin component specific styles
 .features-carousel {
   text-align: center;
 
@@ -53,8 +58,6 @@
 }
 
 
-
-
 ////////////////////////////////////
 // Tablet View
 ///////////////////////////////////
@@ -82,25 +85,12 @@
     text-align: left;
 
     .icon {
-        display: block;
-        height: 50px;
-        width: 50px;
-        margin-right: 36px;
+      display: block;
+      height: 50px;
+      width: 50px;
+      margin-right: 36px;
     }
 
   }
 
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
