--- a/builds/dev/components/scroll-to-top/scroll-to-top.less
+++ b/builds/dev/components/scroll-to-top/scroll-to-top.less
@@ -1,7 +1,13 @@
 //////////////////////////////////////////////////////
-///     Scroll to top Styles
+///     Scroll to top Component Styles
 //////////////////////////////////////////////////////
 
+// Import Dependencies (Variables and Mixins)
+@import "../../less/utils/constants.less";
+@import "../../../../node_modules/lesshat/lesshat";
+
+
+// Begin component specific styles
 .scroll_btn {
   position: fixed;
   bottom: 25px;
