Made adjustments to the about page and icon-carousel component;

--- a/builds/dev/less/main.less
+++ b/builds/dev/less/main.less
@@ -37,5 +37,6 @@ version history: [location of file]
 @import "layout/footer";
 
 /* Page Specific Styles */
+@import "pages/about";
 @import "pages/contact";
 @import "pages/home";
